--- a/tenexbox.html
+++ b/tenexbox.html
@@ -145,6 +145,7 @@
       </header>
       <main class="tenexbox_main">
         <div id="recentCards"></div>
+        <div id="onlineStatus"></div>
       </main>
     </div>
     <div class="body_wrapper_req">
