fix home page conflicts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="tenex_image" style="display: block" id="main_page_img">
-      <img src="assets/elements/tenex_image.svg" />
+      <img src="assets/images/tenex_image.svg" />
     </div>
 
     <div
@@ -22,7 +22,7 @@
     >
       <div class="mySlides fade">
         <img
-          src="assets/elements/login_and_setting_page_images/alerts and notifications.svg"
+          src="assets/images/alerts and notifications.svg"
         />
         <p>
           Receive the latest alerts and updates of your residential building via
@@ -31,34 +31,12 @@
       </div>
 
       <div class="mySlides fade">
-        <img src="assets/elements/login_and_setting_page_images/calendar.svg" />
+        <img src="assets/images/calendar.svg" />
         <p>
           Track & find notifications, bookings, and requests via our calendar
           feature!
         </p>
       </div>
-
-      <div class="mySlides fade">
-        <img
-          src="assets/elements/login_and_setting_page_images/requests and bookings.svg"
-        />
-        <p>
-          Send requests to your building manager & book amenities via Tenex!
-        </p>
-      </div>
-      <div style="text-align: center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-      </div>
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-      <div class="btn_to_login">
-        <button type="button" id="btn" value="Show Div" onclick="showDiv()">
-          SIGN IN
-        </button>
-      </div>
-
     </div>
     <div class="mySlides fade">
       <img src="assets/images/requests and bookings.svg">
