fixed onborading page and offline mode

--- a/calendar.html
+++ b/calendar.html
@@ -191,6 +191,7 @@
         </div>
         <p>Looks Like you have no notifications for this day</p>
       </div>
+      <div id="onlineStatus"></div>
     </main>
   </div>
   <div class="body_wrapper_notif">
