--- a/tenexbox.html
+++ b/tenexbox.html
@@ -112,7 +112,7 @@
       <header class="tenexbox_header">
         <div class="topHeader">
           <h2 id="headerTitle" class="headerTitle">TenexBox</h2>
-          <form action="" id="searchBar" class="searchBar">
+          <form action="" id="searchBar" class="searchBar visuallyHidden">
             <input
               id="searchBarInput"
               onkeyup="displaySearchResultUI()"
@@ -338,7 +338,7 @@
             </svg>
           </button>
           <h2 id="headerTitle" class="headerTitle">Booking</h2>
-          <form action="" id="searchBar" class="searchBar">
+          <form action="" id="searchBar" class="searchBar visuallyHidden">
             <input
               id="searchBarInput"
               class="searchBarInput hidden"
