Camera video view canvas size reset to default

--- a/newRequestRequest.html
+++ b/newRequestRequest.html
@@ -408,7 +408,7 @@
       <div class="snap_options"><button id="snapPhoto">Click Pic</button></div>
     </div>
     <div class="clicked_camera_feed hidden">
-      <canvas id="canvas" width="320" height="240"></canvas>
+      <canvas id="canvas"></canvas>
       <div class="clicked_options">
         <button id="retake">Retake</button>
         <button id="attachPhoto">Attach</button>
