Fixed missing closed tags

--- a/tenexbox.html
+++ b/tenexbox.html
@@ -369,8 +369,7 @@
         </div>
       </header>
       <section class="detailCardSection">
-        <div id="bookingDetail">
-        </div>
+        <div id="bookingDetail"></div>
       </section>
       <section class="tipsInfoSectionBooking"></section>
     </div>
