Formatting and polishing code

--- a/more.html
+++ b/more.html
@@ -310,17 +310,12 @@
           <button type="button" id="signout_btn">SIGN OUT</button>
         </div>
       </main>
-      <footer></footer>
     </div>
-
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-
-    <!-- Link to handlebars js cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
@@ -331,7 +326,6 @@
 
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
 
     <script>
       // TODO: Replace the following with your app's Firebase project configuration
@@ -349,11 +343,7 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
-    <!-- <script
-      src="https://kit.fontawesome.com/d61ee45fb2.js"
-      crossorigin="anonymous"
-    ></script> -->
-
+    <!-- Link to More (settings) JS -->
     <script src="assets/js/more.js"></script>
   </body>
 </html>
