--- a/newRequestRequest.html
+++ b/newRequestRequest.html
@@ -1078,9 +1078,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Link to handlebars js cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
@@ -1109,6 +1106,7 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
+    <!-- Link to Create New Request JS -->
     <script src="assets/js/newRequestRequest.js"></script>
   </body>
 </html>
