--- a/notificationArchive.html
+++ b/notificationArchive.html
@@ -214,8 +214,6 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <!-- Link to handlebars js cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
@@ -227,7 +225,6 @@
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-storage.js"></script>
 
     <script>
       // TODO: Replace the following with your app's Firebase project configuration
@@ -245,6 +242,7 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
+    <!-- Link to Notification and alert Archive JS -->
     <script src="assets/js/notificationArchive.js"></script>
   </body>
 </html>
