--- a/notificationHome.html
+++ b/notificationHome.html
@@ -783,7 +783,7 @@
             </svg>
           </button>
           <h2 id="headerTitle" class="headerTitle">Notification</h2>
-          <form action="" id="searchBar" class="searchBar visuallyHidden">
+          <form id="searchBar" class="searchBar visuallyHidden">
             <input
               id="searchBarInput"
               class="searchBarInput hidden"
@@ -1011,7 +1011,7 @@
             </svg>
           </button>
           <h2 id="headerTitle" class="headerTitle">Booking</h2>
-          <form action="" id="searchBar" class="searchBar visuallyHidden">
+          <form id="searchBar" class="searchBar visuallyHidden">
             <input
               id="searchBarInput"
               class="searchBarInput hidden"
@@ -1081,6 +1081,7 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
+    <!-- Link to Notification (Home) JS -->
     <script src="assets/js/notificationHome.js"></script>
   </body>
 </html>
