--- a/FAQs.html
+++ b/FAQs.html
@@ -255,7 +255,6 @@
 
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
 
     <script>
       // TODO: Replace the following with your app's Firebase project configuration
@@ -273,11 +272,11 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
-
     <script
       src="https://kit.fontawesome.com/d61ee45fb2.js"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/FAQs.js" defer></script>
+    <!-- Link to FAQs JS -->
+    <script src="assets/js/FAQs.js"></script>
   </body>
 </html>
