--- a/calendar.html
+++ b/calendar.html
@@ -193,7 +193,7 @@
       </div>
       <div id="onlineStatus"></div>
     </main>
-  </div>
+    </div>
   <div class="body_wrapper_notif">
     <header id="notifDetailHeader">
       <div class="topHeader">
@@ -217,7 +217,7 @@
     </header>
     <main id="alertDetailMain">
       <section class="detailCardSection">
-        <div id="notifDetail">
+        <div id="notifDetail"></div>
       </section>
     </main>
   </div>
@@ -320,52 +320,7 @@
     </header>
 
     <section class="detailCardSection">
-      <div id="bookingDetail">
-        <h2 class="requestTitle">
-          New Fob Request
-        </h2>
-        <div class="requestDetail">
-          <div class="requestStatusBar">
-            <div class="statusProgressSent"></div>
-            <div class="statusAll"></div>
-          </div>
-          <div class="requestInfoMain">
-            <p class="description">Hi, <br><br>
-              My key fob is broken and I need a new one. Can you help me get a new one?
-              <br><br>
-              Thanks,<br>
-              Michael
-            </p>
-            <div class="attachmentSection">
-              <div class="attachment">
-                <div class="tag">
-                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M3.13369 9.00928L8.67805 3.46492C9.74353 2.39944 11.4695 2.39944 12.535 3.46492C13.6005 4.5304 13.6005 6.25639 12.535 7.32187L6.50852 13.3483C5.84319 14.0137 4.76325 14.0137 4.09793 13.3483C3.4326 12.683 3.4326 11.6031 4.09793 10.9378L9.16017 5.87551C9.42533 5.61035 9.85924 5.61035 10.1244 5.87551C10.3896 6.14068 10.3896 6.57459 10.1244 6.83975L5.54428 11.4199L6.26746 12.1431L10.8476 7.56293C11.5129 6.89761 11.5129 5.81766 10.8476 5.15234C10.1823 4.48701 9.10231 4.48701 8.43699 5.15234L3.37475 10.2146C2.30927 11.2801 2.30927 13.006 3.37475 14.0715C4.44023 15.137 6.16621 15.137 7.2317 14.0715L13.2582 8.04505C14.7238 6.57941 14.7238 4.20739 13.2582 2.74175C11.7925 1.27611 9.42051 1.27611 7.95487 2.74175L2.41051 8.28611L3.13369 9.00928Z"
-                      fill="#4F4F4F" />
-                  </svg>
-                  <p class="attachmentTitle">img 012.jpg</p>
-                </div>
-              </div>
-              <div class="attachment">
-                <div class="tag">
-                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M3.13369 9.00928L8.67805 3.46492C9.74353 2.39944 11.4695 2.39944 12.535 3.46492C13.6005 4.5304 13.6005 6.25639 12.535 7.32187L6.50852 13.3483C5.84319 14.0137 4.76325 14.0137 4.09793 13.3483C3.4326 12.683 3.4326 11.6031 4.09793 10.9378L9.16017 5.87551C9.42533 5.61035 9.85924 5.61035 10.1244 5.87551C10.3896 6.14068 10.3896 6.57459 10.1244 6.83975L5.54428 11.4199L6.26746 12.1431L10.8476 7.56293C11.5129 6.89761 11.5129 5.81766 10.8476 5.15234C10.1823 4.48701 9.10231 4.48701 8.43699 5.15234L3.37475 10.2146C2.30927 11.2801 2.30927 13.006 3.37475 14.0715C4.44023 15.137 6.16621 15.137 7.2317 14.0715L13.2582 8.04505C14.7238 6.57941 14.7238 4.20739 13.2582 2.74175C11.7925 1.27611 9.42051 1.27611 7.95487 2.74175L2.41051 8.28611L3.13369 9.00928Z"
-                      fill="#4F4F4F" />
-                  </svg>
-                  <p class="attachmentTitle">img 013.jpg</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="requestDetailSub">
-          <p class="newRequestStatus">SENT</p>
-          <p class="newRequestDate">FEB 12, 2021</p>
-        </div>
-      </div> -->
-  </div>
+      <div id="bookingDetail"></div>
   </section>
   <section class="tipsInfoSectionBooking">
   </section>
@@ -401,7 +356,6 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
-
   <!-- Link to Calendar JS -->
   <script src="assets/js/calendar.js"></script>
 </body>
