--- a/newRequestBooking.html
+++ b/newRequestBooking.html
@@ -629,9 +629,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Link to handlebars js cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
@@ -659,7 +656,10 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
-
+    <!-- Link to Create New Booking JS.
+      ***************************************
+      This section is incomplete!
+      *************************************** -->
     <script src="assets/js/newRequestBooking.js"></script>
   </body>
 </html>
