--- a/regulations.html
+++ b/regulations.html
@@ -88,15 +88,11 @@
         </p>
       </main>
     </div>
-
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-
-    <!-- Link to handlebars js cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
@@ -107,7 +103,6 @@
 
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
 
     <script>
       // TODO: Replace the following with your app's Firebase project configuration
@@ -129,6 +124,7 @@
       src="https://kit.fontawesome.com/d61ee45fb2.js"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/regulations.js" defer></script>
+    <!-- Link to Regulations JS -->
+    <script src="assets/js/regulations.js"></script>
   </body>
 </html>
