--- a/newRequestRequest.html
+++ b/newRequestRequest.html
@@ -1063,7 +1063,14 @@
     </main>
     <div class="camera_feed hidden">
       <video id="video" autoplay></video>
+      <!-- <video id="video" autoplay playsinline></video> -->
       <div class="snap_options"><button id="snapPhoto">Click Pic</button></div>
+      <div class="controls">
+        <button id="acceptCamera">Get camera</button>
+        <select id="selectCamera">
+          <option></option>
+        </select>
+      </div>
     </div>
     <div class="clicked_camera_feed hidden">
       <canvas id="canvas"></canvas>
